# rpg-discord-bot

./: .env  .env.test  .gitignore  README.md  pyproject.toml  requirements.txt
src/: bot.py  config.py
src/infrastructure/: embedding_cache.py  embedding_client.py
src/models/: dice_result.py
src/rpgbot/: bootstrap.py  bot.py  config.py
src/rpgbot/core/: campaign_context.py  config.py  container.py  paths.py  provider_loader.py  provider_registry.py  providers.py  resilience.py  runtime.py  runtime_state.py  scoped_container.py  service_registry.py  settings.py
src/rpgbot/infrastructure/: embedding_cache.py  embedding_client.py  executor.py  narrative_graph.py  narrative_memory.py  response_cache.py  vector_index.py  vector_store.py
src/rpgbot/rag/: context_window.py  hnsw_index.py  retrieval_engine.py  semantic_cache.py  topk_heap.py  vector_ann_index.py
src/rpgbot/services/: ai_service.py  dice_parser.py  dice_service.py  log_service.py  memory_service.py  npc_service.py  session_memory.py
src/services/: ai_service.py  campaign_memory.py  dice_service.py  log_service.py  memory_service.py  session_memory.py
src/utils/: vector_utils.py
tests/: conftest.py  test_ai_service.py  test_bootstrap.py  test_dice.py  test_embedding_client.py  test_log.py  test_memory_service.py  test_npc.py
tests/config/: test_runtime.py
tests/fixtures/: autoload.py  embedding_reset.py  fake_embedding_provider.py  fake_llm_provider.py  fake_retry_llm_provider.py  fake_vector_store.py  mock_providers.py
tests/runtime/: __init__.py  test_container.py
(+100 files in other folders)
