[project]
name = "rpgbot"
version = "0.1.0"
description = "Discord RPG AI bot"
requires-python = ">=3.10"

dependencies = [
    "discord.py >= 2.4.0",
    "python-dotenv >= 1.0.1",
    "openai >= 1.51.0",
    "tenacity >= 9.0.0"
]

[project.optional-dependencies]
test = [
    "pytest >= 8.3.0",
    "pytest-asyncio >= 0.24.0",
    "pytest-cov >= 5.0.0",
    "pytest-env >= 1.1.5"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rpgbot = "rpgbot.bot:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "RPG_ENV=test"
]